--- a/index.html
+++ b/index.html
@@ -3,69 +3,74 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Geleceğin Şehrinde Bir Gün</title>
+  <title>Future City - AR Digital Book</title>
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
-      padding: 0;
-      background: #f4f4f9;
-      color: #333;
-      text-align: center;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: #f0f8ff;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      min-height: 100vh;
     }
     .page {
-      padding: 40px 20px;
-      border-bottom: 2px solid #ddd;
+      max-width: 800px;
+      padding: 20px;
+      background: white;
+      margin: 30px auto;
+      border-radius: 20px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.1);
     }
-    h2 {
-      color: #005b99;
+    .page h1 {
+      font-size: 1.8em;
+      color: #0d47a1;
+    }
+    .page p {
+      font-size: 1.2em;
     }
     .ar-link {
       display: inline-block;
-      margin-top: 20px;
-      padding: 10px 20px;
-      background-color: #00bfa5;
+      margin-top: 10px;
+      padding: 10px 15px;
+      background: #2196f3;
       color: white;
-      text-decoration: none;
       border-radius: 8px;
-      transition: background 0.3s ease;
-    }
-    .ar-link:hover {
-      background-color: #00897b;
+      text-decoration: none;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <h1>Geleceğin Şehrinde Bir Gün</h1>
-
   <div class="page">
-    <h2>1. Gözümü Açtığım Şehir</h2>
-    <p>Sabah uyanıyorum. Penceremi açıyorum ve karşıma uçan arabalar, yeşil gökdelenler çıkıyor. Kuşlar kadar sessiz çalışan bu araçlar, şehrin gökyüzünü renklendiriyor.</p>
-    <a class="ar-link" href="https://mywebar.com/project/futurecity" target="_blank">AR ile Şehri Gör</a>
+    <h1>1. Güneşle Uyanmak</h1>
+    <p>Geleceğin şehirlerinde evler kendi enerjisini üretecek. Bu sabah, güneş panelleriyle çalışan evimizde uyandım. Camlar kendiliğinden açıldı ve hafif müzikle yeni gün başladı.</p>
+    <a class="ar-link" href="https://your-webar-link-1.com" target="_blank">AR ile Görüntüle</a>
   </div>
 
   <div class="page">
-    <h2>2. Akıllı Evim</h2>
-    <p>Evimde robot bir yardımcı var. Kahvaltıyı hazırlıyor, duvarlar ise sanat eserleriyle süslenmiş. Her şey sesimle çalışıyor.</p>
-    <a class="ar-link" href="https://mywebar.com/project/smarthomebot" target="_blank">AR Robot Yardımcımı Gör</a>
+    <h1>2. Uçan Arabayla Okula</h1>
+    <p>Artık trafik yok! Okula uçan arabamla gittim. Sadece 3 dakikada gökdelenlerin arasından süzülerek okulun çatısına iniş yaptım.</p>
+    <a class="ar-link" href="https://your-webar-link-2.com" target="_blank">AR ile Görüntüle</a>
   </div>
 
   <div class="page">
-    <h2>3. Yeşil Güç</h2>
-    <p>Şehrimiz tamamen doğa dostu. Güneş panelleri, rüzgar türbinleri... Enerji artık doğadan geliyor. Çiçek şeklinde lambalar bile var!</p>
-    <a class="ar-link" href="https://mywebar.com/project/greenpower" target="_blank">AR Enerji Sistemlerini Gör</a>
+    <h1>3. Hologram Öğretmenle Ders</h1>
+    <p>Öğretmenim sınıfta değildi ama hologramıyla bizimleydi. Sorularımıza cevap verdi, tahtada animasyonlarla ders anlattı.</p>
+    <a class="ar-link" href="https://your-webar-link-3.com" target="_blank">AR ile Görüntüle</a>
   </div>
 
   <div class="page">
-    <h2>4. Okulda Sanatlı STEM</h2>
-    <p>Okulda öğretmenimiz hologram olarak karşımızda. Kodlama dersinde resim çiziyoruz, matematiği tiyatroyla öğreniyoruz.</p>
-    <a class="ar-link" href="https://mywebar.com/project/stemclass" target="_blank">AR Sınıfı Keşfet</a>
+    <h1>4. Sanatla Kodlama</h1>
+    <p>Ders sonrası arkadaşlarımızla birlikte kodlama yaparak interaktif bir sanat eseri oluşturduk. Renkler, sesler ve ışıklarla dolu bu eser tamamen bizim hayal gücümüzün ürünüydü.</p>
+    <a class="ar-link" href="https://your-webar-link-4.com" target="_blank">AR ile Görüntüle</a>
   </div>
 
   <div class="page">
-    <h2>5. Yıldızların Altında</h2>
-    <p>Geceleri şehrimiz yıldız gibi parlıyor. Parkta AR gözlüğümle dijital bir sanat sergisi geziyorum. Gelecekte sanat her yerde!</p>
-    <a class="ar-link" href="https://mywebar.com/project/arsanat" target="_blank">AR Sanat Sergisine Katıl</a>
+    <h1>5. Robotlarla Akşam Oyunları</h1>
+    <p>Akşam olduğunda gökdelenlerin bahçesinde robot arkadaşlarımızla oyun oynadık. Onlar bizim oyun tarzımıza göre hareket ediyor, birlikte eğleniyorduk.</p>
+    <a class="ar-link" href="https://your-webar-link-5.com" target="_blank">AR ile Görüntüle</a>
   </div>
 </body>
 </html>
