--- a/index.html
+++ b/index.html
@@ -23,35 +23,24 @@
       scroll-snap-align: start;
       padding: 40px;
       box-sizing: border-box;
-      background: white url('https://images.unsplash.com/photo-1618221129422-b7c3c17f7c64?auto=format&fit=crop&w=800&q=60') no-repeat right bottom;
-      background-size: 200px;
+      background-size: cover;
+      background-position: center;
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: center;
       border-right: 1px solid #ddd;
-    }
-    .page:nth-child(2) {
-      background-image: url('https://images.unsplash.com/photo-1593508512255-86ab42a8e620?auto=format&fit=crop&w=800&q=60');
-    }
-    .page:nth-child(3) {
-      background-image: url('https://images.unsplash.com/photo-1629909613995-859bc0a5a345?auto=format&fit=crop&w=800&q=60');
-    }
-    .page:nth-child(4) {
-      background-image: url('https://images.unsplash.com/photo-1581090700227-4c4c38e11d84?auto=format&fit=crop&w=800&q=60');
-    }
-    .page:nth-child(5) {
-      background-image: url('https://images.unsplash.com/photo-1616362758250-93e4f2604e63?auto=format&fit=crop&w=800&q=60');
+      color: white;
+      text-shadow: 1px 1px 4px rgba(0,0,0,0.6);
     }
     .page h1 {
       font-size: 2em;
-      color: #0d47a1;
       margin-bottom: 20px;
     }
     .page p {
       font-size: 1.2em;
       line-height: 1.6;
-      max-width: 700px;
+      max-width: 600px;
       text-align: center;
     }
     .ar-link {
@@ -68,33 +57,33 @@
 </head>
 <body>
   <div class="book">
-    <div class="page">
+    <div class="page" style="background-image: url('https://raw.githubusercontent.com/lemonfacx/artstem-book/main/1.png');">
       <h1>1. Güneşle Uyanmak</h1>
-      <p>Sabah gözlerimi açtığımda odam yumuşak bir ışıkla doluydu. Perdeler otomatik olarak açıldı ve güneş enerjisiyle çalışan evim yeni güne hazırdı. Kahvaltımı hazırlayan robot, bugünkü hava durumunu ve haberleri bana hologramla sundu. Camdan dışarı bakınca, gökyüzünde süzülen dronlar ve yeşil enerji kuleleriyle dolu bir şehir manzarası karşılıyordu beni. Bugün çok güzel bir gün olacaktı, hissediyordum.</p>
+      <p>Sabah gözlerimi açtığımda odam yumuşak bir ışıkla doluydu. Perdeler otomatik olarak açıldı ve güneş enerjisiyle çalışan evim yeni güne hazırdı. Kahvaltımı hazırlayan robot, bugünkü hava durumunu ve haberleri bana hologramla sundu.</p>
       <a class="ar-link" href="https://your-webar-link-1.com" target="_blank">AR ile Görüntüle</a>
     </div>
 
-    <div class="page">
+    <div class="page" style="background-image: url('https://raw.githubusercontent.com/lemonfacx/artstem-book/main/2.png');">
       <h1>2. Uçan Arabayla Okula</h1>
-      <p>Dışarı çıktığımda uçan arabam kapıda hazırdı. Güneş enerjisiyle çalışan bu sessiz araçla gökyüzünden okula gittim. Şehrin üzerinde süzülürken parklar, yeşil çatılar ve rüzgar türbinleri dikkatimi çekti. Sadece 3 dakikada okuldaydım. Yol boyunca çevreye duyarlı yapılar ve ekolojik çiftlikler dikkatimi çekti. Tüm şehir, teknoloji ve doğanın uyum içinde çalıştığı bir yaşam alanına dönüşmüştü.</p>
+      <p>Dışarı çıktığımda uçan arabam kapıda hazırdı. Güneş enerjisiyle çalışan bu sessiz araçla gökyüzünden okula gittim. Şehrin üzerinde süzülürken parklar, yeşil çatılar ve rüzgar türbinleri dikkatimi çekti. Sadece 3 dakikada okuldaydım.</p>
       <a class="ar-link" href="https://your-webar-link-2.com" target="_blank">AR ile Görüntüle</a>
     </div>
 
-    <div class="page">
+    <div class="page" style="background-image: url('https://raw.githubusercontent.com/lemonfacx/artstem-book/main/3.png');">
       <h1>3. Hologram Öğretmenle Ders</h1>
-      <p>Okulda sınıfa girdiğimde, öğretmenimiz hologram olarak karşımızdaydı. Büyük bir etkileşimli ekran aracılığıyla konuları anlatıyor, bizden gelen soruları gerçek zamanlı olarak cevaplıyordu. Tüm sınıf arkadaşlarım gözlüklerle derse katıldı. Bu gözlükler sayesinde Mars’taki yaşamı simüle ettik ve ekosistem deneyleri yaptık. Öğrenmek hiç bu kadar heyecanlı olmamıştı.</p>
+      <p>Okulda sınıfa girdiğimde, öğretmenimiz hologram olarak karşımızdaydı. Büyük bir etkileşimli ekran aracılığıyla konuları anlatıyor, bizden gelen soruları gerçek zamanlı olarak cevaplıyordu. Tüm sınıf arkadaşlarım gözlüklerle derse katıldı.</p>
       <a class="ar-link" href="https://your-webar-link-3.com" target="_blank">AR ile Görüntüle</a>
     </div>
 
-    <div class="page">
+    <div class="page" style="background-image: url('https://raw.githubusercontent.com/lemonfacx/artstem-book/main/4.png');">
       <h1>4. Sanatla Kodlama</h1>
-      <p>Ders sonrası sanat ve teknoloji sınıfındaydık. Kod yazarak renkli ışıklar, ses efektleri ve hareketli şekiller oluşturduk. Her birimiz kendi interaktif sanat eserimizi tasarladık. Bu eserler okul bahçesindeki dijital galeride sergilendi. Benim eserim, müzikle hareket eden ışıklı bir ağaçtı. Arkadaşlarımın eserleriyle birlikte bahçemiz bir sanat festivaline dönüştü.</p>
+      <p>Ders sonrası sanat ve teknoloji sınıfındaydık. Kod yazarak renkli ışıklar, ses efektleri ve hareketli şekiller oluşturduk. Her birimiz kendi interaktif sanat eserimizi tasarladık. Bu eserler okul bahçesindeki dijital galeride sergilendi.</p>
       <a class="ar-link" href="https://your-webar-link-4.com" target="_blank">AR ile Görüntüle</a>
     </div>
 
-    <div class="page">
+    <div class="page" style="background-image: url('https://raw.githubusercontent.com/lemonfacx/artstem-book/main/5.png');">
       <h1>5. Robotlarla Akşam Oyunları</h1>
-      <p>Gün batımında arkadaşlarımla birlikte robot köpekler ve yapay zekâ destekli oyun robotlarıyla bahçede vakit geçirdik. Oyunlarımız, hareketimize ve tercihlerimize göre şekilleniyordu. Teknoloji ve doğa iç içeydi. Gökyüzünde beliren yıldızları izlerken, günün ne kadar özel geçtiğini düşündüm. Geleceğin şehrinde yaşamak gerçekten büyüleyici bir deneyimdi.</p>
+      <p>Gün batımında arkadaşlarımla birlikte robot köpekler ve yapay zekâ destekli oyun robotlarıyla bahçede vakit geçirdik. Oyunlarımız, hareketimize ve tercihlerimize göre şekilleniyordu. Teknoloji ve doğa iç içeydi.</p>
       <a class="ar-link" href="https://your-webar-link-5.com" target="_blank">AR ile Görüntüle</a>
     </div>
   </div>
