--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   <style>
     body {
       margin: 0;
+      background-color: #f2f2f2;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
       overflow: hidden;
+      font-family: sans-serif;
     }
     .book {
       display: flex;
@@ -15,26 +21,32 @@
       height: 100vh;
       overflow-x: auto;
       scroll-snap-type: x mandatory;
+      align-items: center;
+      justify-content: center;
     }
     .page {
-      flex: 0 0 100vw;
-      height: 100vh;
-      scroll-snap-align: start;
+      flex: 0 0 90vw;
+      height: 90vh;
+      max-width: 400px;
       background-size: cover;
       background-position: center;
+      background-color: white;
+      box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
+      border-radius: 16px;
+      margin: 0 5vw;
       position: relative;
+      scroll-snap-align: center;
     }
     .ar-link {
       position: absolute;
-      bottom: 20px;
-      right: 20px;
+      bottom: 16px;
+      right: 16px;
       padding: 10px 16px;
       background: rgba(0, 0, 0, 0.7);
       color: white;
       border-radius: 8px;
       text-decoration: none;
       font-weight: bold;
-      font-family: sans-serif;
     }
   </style>
 </head>
