--- a/index.html
+++ b/index.html
@@ -18,24 +18,25 @@
     .book {
       display: flex;
       width: 100vw;
-      height: 100vh;
+      height: 90vh;
       overflow-x: auto;
       scroll-snap-type: x mandatory;
       align-items: center;
-      justify-content: center;
+      justify-content: flex-start;
+      padding: 10px;
     }
     .page {
-      flex: 0 0 90vw;
-      height: 90vh;
+      flex: 0 0 100%;
       max-width: 400px;
+      height: 100%;
       background-size: cover;
       background-position: center;
       background-color: white;
       box-shadow: 0 4px 20px rgba(0, 0, 0, 0.2);
       border-radius: 16px;
-      margin: 0 5vw;
       position: relative;
-      scroll-snap-align: center;
+      scroll-snap-align: start;
+      margin: 0 10px;
     }
     .ar-link {
       position: absolute;
