--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       align-items: center;
       justify-content: flex-start;
       padding: 10px;
+      justify-content: center; /* Ortalamayı burayla sağlıyoruz */
     }
     .page {
       flex: 0 0 100%;
