--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <body>
   <div class="book">
     <div class="page" style="background-image: url('https://raw.githubusercontent.com/lemonfacx/artstem-book/main/1.png');">
-      <a class="ar-link" href="https://your-webar-link-1.com" target="_blank">AR ile Gör</a>
+      <a class="ar-link" href="https://mywebar.com/p/Project_0_s2p2eogpe8" target="_blank">AR ile Gör</a>
     </div>
     <div class="page" style="background-image: url('https://raw.githubusercontent.com/lemonfacx/artstem-book/main/2.png');">
       <a class="ar-link" href="https://your-webar-link-2.com" target="_blank">AR ile Gör</a>
